Listar Direccion por medio de la cedula

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Base_de_Datos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.postgresql-42.2.6.jar=C:\\Users\\Domenica Ca\u00f1izares\\Desktop\\Librerias JAva\\postgresql-42.2.6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.postgresql-42.2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=ec.edu.ups.vista.Menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
